# rusty-peanuts

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml  sqlx-data.json
.github/workflows/: main.yml
migrations/: 20201109221209_initial_schema.sql
rusty-peanuts-api-structs/: Cargo.toml
rusty-peanuts-api-structs/src/: lib.rs
rusty-peanuts-cli/: Cargo.toml
rusty-peanuts-cli/src/: xmp.rs
src/: lib.rs  main.rs  telemetry.rs
src/db/: mod.rs  photos.rs  secret_keys.rs
src/models/: photos.rs
src/web/: mod.rs
src/web/api/: mod.rs  utils.rs
src/web/api/v1/: mod.rs
src/web/html/: mod.rs  utils.rs
