[package]
name = "rusty-peanuts"
version = "0.1.0"
authors = ["Johannes Löthberg <johannes@kyriasis.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16.0", default-features = false, features = ["h1-server", "cookies", "logger"] }
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["runtime-async-std-rustls", "postgres", "json", "offline", "time"] }
num_cpus = "1.13.1"
serde_json = "1.0.85"
async-trait = "0.1.57"
dotenv = "0.15.0"
tera = { version = "1.17.0", default-features = false, features = ["builtins"] }
time = { version = "0.3.14", default-features = false, features = ["serde"] }
serde_qs = "0.10.1"
percent-encoding = "2.1.0"
sitemap = "0.4.1"
structopt = "0.3.26"

rusty-peanuts-api-structs = { path = "rusty-peanuts-api-structs" }

[workspace]
members = ["rusty-peanuts-api-structs", "rusty-peanuts-cli"]
