[package]
name = "rusty-peanuts-cli"
version = "0.1.0"
authors = ["Johannes Löthberg <johannes@kyriasis.com>"]
edition = "2018"
default-run = "rusty-peanuts-cli"

[dependencies]
futures-lite = "1.11.3"
image = "0.23.14"
isahc = { version = "1.1.0", features = ["static-ssl"] }
mozjpeg = "0.8.24"
tiff = "0.6.1"
rust-s3 = { version = "0.27.0-beta8", default-features = false, features = ["with-async-std"] }
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
surf = "2.2.0"
serde = "1.0.124"
quick-xml = { version = "0.22.0", features = ["serialize"] }
env_logger = "0.8.3"
log = "0.4.14"
dotenv = "0.15.0"
structopt = "0.3.21"
serde_json = "1.0.64"

rusty-peanuts-api-structs = { path = "../rusty-peanuts-api-structs" }
