[package]
name = "rusty-peanuts-cli"
version = "0.1.0"
authors = ["Johannes Löthberg <johannes@kyriasis.com>"]
edition = "2018"
default-run = "rusty-peanuts-cli"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
aws-creds = { version = "0.30.0", features = ["http-credentials", "rustls-tls", "attohttpc"], default-features = false }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-lite = "1.11.3"
image = "0.24.3"
isahc = { version = "1.1.0", features = ["static-ssl"] }
log = "0.4.14"
mozjpeg = "0.9.4"
quick-xml = { version = "0.24.0", features = ["serialize"] }
rust-s3 = { version = "0.32.3", default-features = false, features = ["with-async-std"] }
rusty-peanuts-api-structs = { path = "../rusty-peanuts-api-structs" }
serde = "1.0.124"
serde_json = "1.0.64"
structopt = "0.3.21"
surf = "2.2.0"
tiff = "0.7.3"
