[package]
name = "rusty-peanuts-cli"
version = "0.1.0"
authors = ["Johannes Löthberg <johannes@kyriasis.com>"]
edition = "2018"
default-run = "rusty-peanuts-cli"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-lite = "1.12.0"
image = "0.24.3"
isahc = { version = "1.7.2", features = ["static-ssl"] }
log = "0.4.17"
mozjpeg = "0.9.4"
quick-xml = { version = "0.24.0", features = ["serialize"] }
rust-s3 = { version = "0.32.3", default-features = false, features = ["with-async-std"] }
rusty-peanuts-api-structs = { path = "../rusty-peanuts-api-structs" }
serde = "1.0.144"
serde_json = "1.0.85"
structopt = "0.3.26"
surf = "2.3.2"
tiff = "0.7.3"
